@@ -233,6 +233,9 @@ Fixed bugs:
   or in the top package.
   Bugzilla Report 21915.
 
+* Project.toBoolean(String) now handles null as argument and does not throw a
+  NullPointerException any more.
+
 Other changes:
 --------------
 * All tasks can be used outside of <target>s.  Note that some tasks
@@ -586,7 +589,7 @@ Other changes:
   Bugzilla Report 22533.
 
 * additional shortcuts for ant options (-d --> -debug, -e --> -emacs,
-  -h --> -help, -p --> -projecthelp, -s --> -find)
+  -h --> -help, -p --> -projecthelp, -s --> -find).
 
 Changes from Ant 1.5.3 to Ant 1.5.4
 ===================================
